// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput TagInput baseVue demo works fine 1`] = `
<div
  style="width: 60%;"
>
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <div
        class="t-tag-input__prefix"
      >
        Controlled: 
      </div>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <div
        class="t-tag-input__prefix"
      >
        UnControlled: 
      </div>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
</div>
`;

exports[`TagInput TagInput collapsedVue demo works fine 1`] = `
<div
  style="width: 100%;"
>
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        <!---->
        
        +
        4
        
        <!---->
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Miniprogram
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
      <div
        class="t-popup__reference"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content"
            >
              
              
              <span
                class="t-tag t-tag--default t-size-m t-tag--dark"
                style="margin-right: 4px;"
              >
                <!---->
                
                Angular
                
                <!---->
              </span>
              <span
                class="t-tag t-tag--default t-size-m t-tag--dark"
                style="margin-right: 4px;"
              >
                <!---->
                
                Flutter
                
                <!---->
              </span>
              
              
              <!---->
            </div>
          </div>
        </transition-stub>
        
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          <!---->
          
          More(2)
          
          <!---->
        </span>
        
      </div>
      
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TagInput TagInput customTagVue demo works fine 1`] = `
<div
  style="width: 100%;"
>
  <!-- 方式一：使用 tag 定义标签内部内容 -->
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
          style="max-width: 20px; max-height: 20px; border-radius: 50%;"
        />
        <span>
            StudentA
        </span>
        
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
          style="max-width: 20px; max-height: 20px; border-radius: 50%;"
        />
        <span>
            StudentB
        </span>
        
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        <!---->
        
        +
        1
        
        <!---->
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <!-- 方式二：使用 valueDisplay 定义全部内容 -->
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        style="margin-right: 4px;"
      >
        <!---->
        
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
          style="max-width: 20px; max-height: 20px; border-radius: 50%;"
        />
        <span>
            StudentA
        </span>
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        style="margin-right: 4px;"
      >
        <!---->
        
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
          style="max-width: 20px; max-height: 20px; border-radius: 50%;"
        />
        <span>
            StudentB
        </span>
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        style="margin-right: 4px;"
      >
        <!---->
        
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
          style="max-width: 20px; max-height: 20px; border-radius: 50%;"
        />
        <span>
            StudentC
        </span>
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TagInput TagInput maxVue demo works fine 1`] = `
<div
  style="width: 100%;"
>
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder="最多只能输入 3 个标签"
      type="text"
    />
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TagInput TagInput statusVue demo works fine 1`] = `
<div>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      禁用状态：
    </label>
    <div
      class="t-input t-size-m t-is-disabled t-input--prefix t-tag-input"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--disabled"
        >
          <!---->
          
          Vue
          
          <!---->
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--disabled"
        >
          <!---->
          
          React
          
          <!---->
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--disabled"
        >
          <!---->
          
          Miniprogram
          
          <!---->
        </span>
        
      </div>
      <input
        autocomplete="false"
        class="t-input__inner"
        disabled=""
        placeholder=""
        type="text"
      />
      <!---->
      <!---->
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      只读状态：
    </label>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-readonly t-input--prefix t-tag-input"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            <!---->
            
            Vue
            
            <!---->
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            <!---->
            
            React
            
            <!---->
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            <!---->
            
            Miniprogram
            
            <!---->
          </span>
          
        </div>
        <input
          autocomplete="false"
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input__tips--normal"
      >
        这是普通文本提示
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      成功状态：
    </label>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-success t-input--prefix t-tag-input"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Vue
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            React
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Miniprogram
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          autocomplete="false"
          class="t-input__inner"
          placeholder=""
          type="text"
        />
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input__tips--success"
      >
        校验通过文本提示
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      告警状态：
    </label>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-warning t-input--prefix t-tag-input"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Vue
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            React
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Miniprogram
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          autocomplete="false"
          class="t-input__inner"
          placeholder=""
          type="text"
        />
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input__tips--warning"
      >
        校验不通过文本提示
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      错误状态：
    </label>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-error t-input--prefix t-tag-input"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Vue
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            React
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            <!---->
            
            Miniprogram
            
            <svg
              class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          autocomplete="false"
          class="t-input__inner"
          placeholder=""
          type="text"
        />
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input__tips--error"
      >
        校验存在严重问题文本提示
      </div>
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput themeVue demo works fine 1`] = `
<div
  style="width: 50%;"
>
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Miniprogram
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Miniprogram
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Miniprogram
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
  <br />
  <br />
  <div
    class="t-input t-size-m t-input--prefix t-tag-input"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Vue
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        React
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <span
        class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
      >
        <!---->
        
        Miniprogram
        
        <svg
          class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      
    </div>
    <input
      autocomplete="false"
      class="t-input__inner"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
  </div>
</div>
`;
